# cli-imagefetcher

./: README.rst  applicationDiagram.drawio  pyproject.toml
cli_imagefetcher/: CONSTANTS.py  cli.py  imageManipulation.py  order.py  search.py  validation.py
tests/: CONSTANTS.py  test_validation.py
tests/data/: multiPolygon.geojson  searchResponse.json
